--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ main {
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
