--- a/style.css
+++ b/style.css
@@ -10,8 +10,67 @@
 main {
     width: 100%;
     height: 100vh;
+    background-color: #52616b;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    color: #f0f5f9;
+}
+
+h1 {
+    text-shadow: 2px 2px 5px #1e2022;
+}
+
+.generator-container {
+    width: 500px;
+    background-color: #1e2022;
+    padding: 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    box-shadow: 1px 1px 5px #1e2022;
+}
+
+.generator-container span {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 500;
+}
+.generator-container input {
+    width: 100%;
+}
+
+.generator-container button {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.generator-container button:hover {
+    background-color: #c0eb6a;
+}
+
+.passwor-containerd {
+    width: 500px;
+    background-color: #1e2022;
+    padding: 20px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    box-shadow: 1px 1px 5px #1e2022;
+}
+
+.hide {
+    display: none;
 }
