feat: function to generate created password

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h1 {
     background-color: #c0eb6a;
 }
 
-.passwor-containerd {
+.password-container {
     width: 500px;
     background-color: #1e2022;
     padding: 20px;
